@@ -36,6 +36,10 @@ ddetect (0.59) unstable; urgency=low
     - Added/updated bulgarian translation (bg.po).
   * Jure Cuhalev
     - Added/updated slovenian translation (sl.po).
+  * Karsten Merker
+    - Fix hw-detect error messages about missing sd_mod and
+      sr_mod when SCSI-disk- and SCSI-CDROM support is compiled
+      into the kernel statically. (closes: Bug#224745)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 22 Dec 2003 14:15:11 -0500
 
